--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -30,6 +31,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
@@ -68,11 +70,11 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.3em 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #3a3a3a;
   cursor: pointer;
   transition: border-color 0.25s;
   min-width: 8em;
@@ -92,7 +94,7 @@ input {
   border-radius: 8px;
   border: 1px solid #aa7777;
   font-family: inherit;
-  background-color: #ffeeee;
+  background-color: #eeeeee;
   color: #000000;
   transition: border-color 0.25s, background-color 0.25s;
 }
@@ -106,6 +108,7 @@ input {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #eeeeee;
+    border-color: #7777aa;
   }
 }
