dark or light mode compatible

--- a/src/style.css
+++ b/src/style.css
@@ -113,11 +113,11 @@ input {
     color: #535bf2;
   }
   button {
-    background-color: #ffffff;
+    background-color: #eeeeee;
     border-color: transparent;
   }
   input {
-    background-color: #ffffff;
+    background-color: #eeeeee;
     color: #000000;
   }
   input[type="checkbox"] {
@@ -162,11 +162,11 @@ input {
     color: #535bf2;
   }
   button {
-    background-color: #ffffff;
+    background-color: #eeeeee;
     border-color: transparent;
   }
   input {
-    background-color: #ffffff;
+    background-color: #eeeeee;
     color: #000000;
   }
   input[type="checkbox"] {
